Better efficiency by splitting huge HDF5 file into N smaller ones

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ final_haplotypes.phy
 # Associated with dfoilPicker2compd.py
 myoutgroups.txt
 compDcommands.txt
+compDcommands.*.txt
 *.compDtest.txt
 *.split.txt
 *.picked.txt
